June 19, 2009 (ntrel)
  Move to geany-plugins project, add i18n support.
  Rename from GeanyLua to 'Lua Script'.
  Temporarily fix plugin_configure().

December 5, 2008 (ntrel)
  Update to Geany API v115.

September 17, 2008 (eht16)
  Fix to work with Geany API v93.

September 11, 2008 (ntrel)
  Fix wrong argument for "project-close" signal.
  Fix document signal callbacks to use document pointers.

August 8, 2008 (ntrel)
  Fix to work with Geany API v86.

August 7, 2008 (ntrel)
  Use $(mkdir_p) instead of $(MKDIR_P) in Makefile, so it works with
  automake <= 1.96.

July 17, 2008 (ntrel)
  Fix use of old app macro.
  Fix segfault in last commit in glspi_init() (oops).
  Don't install .svn subdirectories in examples.

July 15, 2008 (ntrel)
  Fix for GeanyEditor changes.

July 11, 2008 (ntrel)
  Use plugin_init(), plugin_cleanup().
  Add macro for main_widgets, fix project access.
  Require Lua >= 5.1, not 5.1.2.

July 10, 2008 (ntrel)
  Convert doc_array usage to documents_array.

July 2, 2008 (ntrel)
  Update to use document pointers.
  Update MY_GEANY_API_VER now we use p_document->close().
  Update for new PLUGIN_ macro names.
  Add comment about reloading in glspi_open().
  Rename GeanyCallbacks, geany_callbacks symbol.
  Rename document -> GeanyDocument.

July 1, 2008 (ntrel)
  Begin updating for Geany 0.15 API changes.
  Use main_widgets instead of old app.
  Include some Geany headers due to moved definitions.
  Add glspi_geany_functions.
  Use new _prefs structs.
  Update DOCS macro usage for documents_array.

Mar 24, 2008
  Released version 0.7.0

Mar 23, 2008
  Added a new examples folder "work" with three new scripts:
    edit-test-script.lua; run-test-script.lua; install-test-script.lua
  These should make it a little easier for users to develop and save
  their own personal scripts.
  Also added "examples/edit/calculator.lua" -
  The idea came from the "Plugin Wishlist" on the Geany website, only